@@ -1,3 +1,4 @@
+# project settings
 package.name=S2Dao
 project.name=${phing.project.name}
 project.version=1.2.0
@@ -10,6 +11,26 @@ project.test.dir=${project.basedir}/test
 project.license.name=The Apache License, Version 2.0
 project.license.file=Apache_Software_License_2.0.txt
 project.release.notes=beta-1.2.0
-skeleton.src.dir=${project.build.dir}/skel
-test.src.dir=${project.build.dir}/test
+
+# pear-pkg difinitions
+gcore.core.file=${project.build.dir}/${project.name}/s2dao.core.classes.php
 gcore.file.list=${project.src.dir}/phing/etc/s2dao.core.files.txt
+package.inc.template=${project.src.dir}/phing/etc/S2Dao.php.tpl
+package.inc.file=${project.build.dir}/${project.name}/S2Dao.php
+
+# S2Dao test difinitions
+test.resource.dir=${project.test.dir}/resource
+test.app.dicon=${test.resource.dir}/app.dicon
+test.dao.dicon=${test.resource.dir}/dao.dicon
+test.pdo.dicon=${test.resource.dir}/pdo-sqlite.dicon
+#test.pdo.dicon=${test.resource.dir}/pdo-mysql.dicon
+#test.pdo.dicon=${test.resource.dir}/pdo-pgsql.dicon
+#test.pdo.dicon=${test.resource.dir}/pdo-oracle.dicon
+#test.pdo.dicon=${test.resource.dir}/pdo-firebird.dicon
+#test.pdo.dicon=${test.resource.dir}/pdo-sybase.dicon
+
+# test code gen
+testgen.out.dir=${project.build.dir}/test
+
+# skeleton code gen
+skeleton.src.dir=${project.build.dir}/skel
