@@ -12,23 +12,12 @@ define('RESOURCE_DIR', TEST_DIR . '/resource');
 require_once "S2Container/S2Container.php";
 require_once HOME_DIR . '/S2Dao.php';
 //require_once "S2Dao/S2Dao.php";
-require_once "PHPUnit2/Framework/IncompleteTestError.php";
 
 // Spyc use
 include_once 'spyc.php';
 // sqlite_procedure funcions
 include_once TEST_DIR . "/classes/pdo_sqlite/procedure.php";
 
-define('S2CONTAINER_PHP5_APP_DICON', RESOURCE_DIR . '/app.dicon');
-define('S2CONTAINER_PHP5_LOG_LEVEL', S2Container_SimpleLogger::FATAL);
-define('S2CONTAINER_PHP5_DOM_VALIDATE', false);
-define('DAO_DICON', RESOURCE_DIR . '/dao.dicon');
-define('PDO_DICON', RESOURCE_DIR . '/pdo-sqlite.dicon');
-//define('PDO_DICON', RESOURCE_DIR . '/pdo-mysql.dicon');
-//define('PDO_DICON', RESOURCE_DIR . '/pdo-pgsql.dicon');
-//define('PDO_DICON', RESOURCE_DIR . '/pdo-oracle.dicon');
-//define('PDO_DICON', RESOURCE_DIR . '/pdo-firebird.dicon');
-//define('PDO_DICON', RESOURCE_DIR . '/pdo-sybase.dicon');
 
 S2ContainerClassLoader::import(S2CONTAINER_PHP5);
 S2ContainerClassLoader::import(S2DAO_PHP5);
